--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 0, 0%, 96%;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -84,4 +84,5 @@
 .swiper-wrapper {
   display: flex;
   width: fit-content;
+  justify-content: space-between;
 }
